--- a/_sass/components/posts-section.scss
+++ b/_sass/components/posts-section.scss
@@ -27,13 +27,13 @@
       h4,
       h5,
       h6 {
-        padding-top: 6.5rem;
-        margin-top: -4.5rem;
+        padding-top: 0.5rem;
+        margin-top: 0;
       }
 
       h2,
       h3 {
-        padding-top: 5.5rem;
+        padding-top: 0.8rem;
       }
     }
   }
