--- a/_layouts/mentorship.html
+++ b/_layouts/mentorship.html
@@ -49,6 +49,8 @@
     {% include analytics.html %}
     <script src="{{ "/assets/js/vendors/highlight.min.js" | prepend: site.baseurl_root }}"></script>
     <script src="{{ "/assets/js/base.js" | prepend: site.baseurl_root }}"></script>
+    <script src="{{ "/assets/js/post-page.js" | prepend: site.baseurl_root }}"></script>
+    <script src="{{ "/assets/js/hljs.js" | prepend: site.baseurl_root }}"></script>
   </body>
 
 </html>
