--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,3 +51,4 @@ layout: default
 
 <script src="{{ "/assets/js/vendors/highlight.min.js" | prepend: site.baseurl_root }}"></script>
 <script src="{{ "/assets/js/post-page.js" | prepend: site.baseurl_root }}"></script>
+<script src="{{ "/assets/js/hljs.js" | prepend: site.baseurl_root }}"></script>
