--- a/_sass/elements/project-card.scss
+++ b/_sass/elements/project-card.scss
@@ -20,8 +20,17 @@
   }
 
   .project-card-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     margin: 0 !important;
     padding: 1rem;
+
+    .image {
+      width: 80px;
+      height: auto;
+    }
   }
 
   a {
@@ -59,7 +68,7 @@
     line-height: 28px;
     margin: 0;
     padding-left: 1rem;
-    padding-top: 4rem !important;
+    padding-top: 0rem !important;
 
     a,
     a:visited {
