--- a/_layouts/mentorship.html
+++ b/_layouts/mentorship.html
@@ -51,6 +51,7 @@
     <script src="{{ "/assets/js/base.js" | prepend: site.baseurl_root }}"></script>
     <script src="{{ "/assets/js/post-page.js" | prepend: site.baseurl_root }}"></script>
     <script src="{{ "/assets/js/hljs.js" | prepend: site.baseurl_root }}"></script>
+    <script src="{{ "/assets/js/mentorship.js"| prepend: site.baseurl_root }}"></script>
   </body>
 
 </html>
