--- a/_sass/settings/settings.scss
+++ b/_sass/settings/settings.scss
@@ -68,3 +68,17 @@ $size-desktop: 1200px;
 $size-landscape-tablet: 900px;
 $size-portrait-tablet: 600px;
 $size-phone: 480px;
+
+// Generic Pallete from $primary
+
+$gp-red: #a43a4c;
+$gp-orange-dark: #cc624c;
+$gp-orange-mid: #e9904d;
+$gp-orange-light: #f8c355;
+$gp-yellow: #f9f871;
+
+// Highlight Palette from $primary
+
+$hp-pink: #ff6ebb;
+$hp-olive: #efefdc;
+$hp-violet: #ae6dab;
