--- a/styles/tools/medias-queries/all.scss
+++ b/styles/tools/medias-queries/all.scss
@@ -3,6 +3,7 @@
 @import "../../tools/medias-queries/fixed-sizes/tablet-landscape";
 @import "../../tools/medias-queries/fixed-sizes/tablet-portrait";
 @import "../../tools/medias-queries/fixed-sizes/phone";
+@import "../../tools/medias-queries/fixed-sizes/tablet";
 
 @import "../../tools/medias-queries/custom-media";
 
