--- a/styles/components/skills-section.scss
+++ b/styles/components/skills-section.scss
@@ -101,6 +101,12 @@
     }
   }
 
+  .skills-tags {
+    .tags {
+      margin-bottom: 0;
+    }
+  }
+
   .skills-section-item {
     @extend .horizontal-center-container;
 
@@ -185,6 +191,31 @@
       .skills-section-title {
         width: 100%;
         margin-left: -1.5rem;
+      }
+
+      .icon {
+        .fa-lg {
+          font-size: 1.3rem;
+        }
+      }
+
+      @include for-tablet-only {
+        flex-wrap: wrap;
+
+        .icon {
+          .fa-lg {
+            font-size: 1.5rem;
+          }
+        }
+      }
+
+      @include for-phone-only {
+        flex-wrap: nowrap;
+        .icon {
+          .fa-lg {
+            font-size: 1.7rem;
+          }
+        }
       }
     }
 
