--- a/styles/objects/timeline.scss
+++ b/styles/objects/timeline.scss
@@ -10,6 +10,16 @@
 @import "../generics/horizontal-center-container";
 
 .timeline {
+  min-height: 25vh;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+
+  > .hero-body {
+    width: 100%;
+  }
+
   .timeline-content {
     position: relative;
     height: 5rem;
@@ -26,7 +36,7 @@
       transform: rotate(270deg) scaleX(1);
       position: absolute;
       left: 0;
-      top: 30%;
+      top: 25%;
 
       @include for-tablet-portrait-and-down {
         left: -2rem;
