--- a/styles/main.scss
+++ b/styles/main.scss
@@ -71,8 +71,10 @@
 @import "components/projects-section";
 @import "components/recommendations";
 @import "components/skills-section";
+@import "components/topics-section";
 @import "components/tooltips";
 @import "components/lang-dropdown";
+@import "components/table-of-contents";
 
 /*
   Trumps Layer
