--- a/styles/elements/navbar.scss
+++ b/styles/elements/navbar.scss
@@ -3,12 +3,15 @@
 @import "../tools/medias-queries/all";
 
 .navbar {
+  max-height: 3.25rem;
+
   &.is-active {
     @include for-tablet-landscape-and-down {
       position: fixed;
       height: 100vh;
       width: 100vw;
       overflow: hidden;
+      max-height: 100vh;
     }
   }
 
