Add Calendar link

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -75,6 +75,7 @@
 @import "components/tooltips";
 @import "components/lang-dropdown";
 @import "components/table-of-contents";
+@import "components/calendar-link";
 
 /*
   Trumps Layer
