--- a/styles/objects/timeline.scss
+++ b/styles/objects/timeline.scss
@@ -332,6 +332,7 @@
             overflow: hidden;
             height: auto;
             max-height: 15vh;
+            min-height: 300px;
           }
         }
       }
