Finish resume page

--- a/styles/elements/navbar.scss
+++ b/styles/elements/navbar.scss
@@ -53,6 +53,10 @@
       &.is-blog {
         background-color: rgba($tertiary, 0.1);
       }
+
+      &.is-resume {
+        background-color: rgba($tertiary, 0.2);
+      }
     }
   }
 }
