--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -7,165 +7,215 @@
 @import "generics/horizontal-center-container";
 @import "generics/vertical-center-container";
 
-body {
-  font-size: 14px;
+$base_size: 16px;
+
+.navbar,
+.footer {
+  display: none;
+}
+
+.resume {
   display: flex;
   justify-content: center;
-  font-family: Montserrat, -apple-system, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    "Helvetica", "Arial", sans-serif;
-  color: #152026;
-}
+  font-size: $base_size;
+  min-height: 100vh;
+  max-height: 100%;
 
-p,
-h3,
-h4,
-h5,
-h6 {
-  padding: 0;
-  margin: 0;
-}
-
-h1,
-h2 {
-  padding: 0;
-  margin: 0;
-  padding-bottom: 0.25rem;
-}
-
-section {
-  padding: 0.15rem 0;
-}
-
-.main {
-  max-width: 80vw;
-  min-width: 794px;
-  padding: 10px 20px;
-}
-
-.columns {
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.column {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-.is-row {
-  flex-direction: row;
-}
-
-.is-half {
-  width: 50%;
-}
-
-.pl-1 {
-  padding-left: 1.1rem;
-}
-
-.pl-2 {
-  padding-left: 1.2rem;
-}
-
-.pl-3 {
-  padding-left: 1.3rem;
-}
-
-.pl-4 {
-  padding-left: 1.4rem;
-}
-
-.pl-5 {
-  padding-left: 1.5rem;
-}
-
-.pr-05 {
-  padding-right: 0.5rem;
-}
-
-.ph-5 {
-  padding: 1.5rem 0;
-}
-
-.underlined {
-  text-decoration: underline;
-}
-
-.capitalized {
-  text-transform: capitalize;
-}
-
-.flex-right {
-  margin-left: 60%;
-}
-
-.job-column {
-  width: calc(50% - 0.5rem);
-}
-
-.job-column:nth-child(odd) {
-  margin-right: 0.5rem;
-}
-
-.job-column:nth-child(even) {
-  margin-left: 0.5rem;
-}
-
-.description-line {
-  padding-bottom: 0.5rem;
-}
-
-.card {
-  padding: 15px 5px;
-}
-
-.card .small {
-  color: #223440;
-  font-size: 12px;
-}
-
-.chip.is-soft {
-  background: #5a758c;
-  padding: 10px 15px;
-  border: 1px solid #adc5d940;
-  border-radius: 20px;
-  margin: 10px 5px;
-  display: flex;
-  color: #d2e1ee;
-  justify-content: center;
-}
-
-.chip.is-hard {
-  background: #152026;
-  padding: 10px 15px;
-  border: 1px solid #d2e1ee40;
-  border-radius: 20px;
-  margin: 10px 5px;
-  color: #d2e1ee;
-  display: flex;
-  justify-content: center;
-}
-
-@page {
-  margin: 5px 30px;
-}
-
-@media print {
-  body {
-    overflow: visible;
+  * {
+    font-family: Montserrat, -apple-system, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      "Helvetica", "Arial", sans-serif !important;
+    color: #152026 !important;
   }
 
-  .experience-section {
-    page-break-before: always;
+  aside {
+    background-color: #223440;
+    padding: 10px 15px;
+
+    min-height: 100vh;
+    max-height: 100%;
+    padding-bottom: 5px;
+
+    * {
+      color: #d2e1ee !important;
+    }
   }
 
-  .short-description {
-    max-width: 90%;
+  p,
+  h3,
+  h4,
+  h5,
+  h6 {
+    padding: 0;
+    margin: 0;
+    font-size: unset !important;
+  }
+
+  h1,
+  h2 {
+    padding: 0;
+    margin: 0;
+    padding-bottom: 0.25rem;
+  }
+
+  h1 {
+    font-size: 1.5rem !important;
+  }
+
+  h2 {
+    font-size: 1.4rem !important;
+  }
+
+  h3 {
+    font-size: 1.3rem !important;
+  }
+
+  section {
+    padding: 0.15rem 0;
+  }
+
+  .main {
+    max-width: 80vw;
+    min-width: 794px;
+    padding: 10px 20px;
+  }
+
+  .columns {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+  }
+
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .is-row {
+    flex-direction: row;
+  }
+
+  .is-half {
+    width: 50%;
+  }
+
+  .pl-1 {
+    padding-left: 1.1rem;
+  }
+
+  .pl-2 {
+    padding-left: 1.2rem;
+  }
+
+  .pl-3 {
+    padding-left: 1.3rem;
+  }
+
+  .pl-4 {
+    padding-left: 1.4rem;
+  }
+
+  .pl-5 {
+    padding-left: 1.5rem;
+  }
+
+  .pr-05 {
+    padding-right: 0.5rem;
+  }
+
+  .ph-5 {
+    padding: 1.5rem 0;
+  }
+
+  .underlined {
+    text-decoration: underline;
+  }
+
+  .capitalized {
+    text-transform: capitalize;
+  }
+
+  .flex-right {
+    margin-left: 60%;
+  }
+
+  .job-column {
+    width: calc(50% - 0.5rem);
+  }
+
+  .job-column:nth-child(odd) {
+    margin-right: 0.5rem;
+  }
+
+  .job-column:nth-child(even) {
+    margin-left: 0.5rem;
+  }
+
+  .description-line {
+    padding-bottom: 0.5rem;
+  }
+
+  .card {
+    padding: 15px 5px;
+  }
+
+  .card .small {
+    color: #223440;
+    font-size: $base_size - 2px;
+  }
+
+  .skills {
+    .columns .is-row {
+      justify-content: center;
+    }
+  }
+
+  .chip {
+    padding: 5px 9.5px;
+    border-radius: 20px;
+    margin: 5px;
+    display: flex;
+    justify-content: center;
+
+    font-size: 12px !important;
+
+    &.is-soft {
+      background: #5a758c !important;
+      border: 1px solid #adc5d940 !important;
+
+      * {
+        color: #d2e1ee !important;
+      }
+    }
+
+    &.is-hard {
+      background: #152026 !important;
+      border: 1px solid #d2e1ee40 !important;
+
+      * {
+        color: #d2e1ee !important;
+      }
+    }
+  }
+
+  @page {
+    margin: 5px 30px;
+  }
+
+  @media print {
+    body {
+      overflow: visible;
+    }
+
+    .experience-section {
+      page-break-before: always;
+    }
+
+    .short-description {
+      max-width: 90%;
+    }
   }
 }
