--- a/styles/vendors.scss
+++ b/styles/vendors.scss
@@ -2,5 +2,11 @@
 
 @import "settings/settings";
 @import "settings/fonts";
-@import "vendors/bulma/bulma.sass";
-@import "settings/icons";
+
+@import '~bulma/bulma';
+
+@import "~@fortawesome/fontawesome-free/scss/fontawesome";
+@import "~@fortawesome/fontawesome-free/scss/solid";
+@import "~@fortawesome/fontawesome-free/scss/brands";
+@import "~@fortawesome/fontawesome-free/scss/regular";
+@import "~@fortawesome/fontawesome-free/scss/v4-shims";
