Add mentorship page

--- a/styles/components/images-section.scss
+++ b/styles/components/images-section.scss
@@ -108,8 +108,8 @@
       }
 
       .images-section-image {
-        width: 100%;
-        max-height: 240px;
+        width: auto;
+        max-height: 215px;
         padding: 1rem 0 0.25rem;
         height: 100%;
         max-height: auto;
