--- a/styles/main.scss
+++ b/styles/main.scss
@@ -76,6 +76,7 @@
 @import "components/lang-dropdown";
 @import "components/table-of-contents";
 @import "components/calendar-link";
+@import "components/mentorship-section";
 
 /*
   Trumps Layer
