--- a/styles/elements/project-card.scss
+++ b/styles/elements/project-card.scss
@@ -47,7 +47,7 @@
     padding-top: 0;
   }
 
-  .project-card-suptitle {
+  .project-card-subtitle {
     color: $quinary;
     font-size: 14px;
     line-height: 20px;
